@@ -3,8 +3,11 @@ ChangeLog for PyLint
 
  --
     * fixed some format checker false positives
-    * depends on common 0.19.3 to generate full configuration file
-    * fixed W0233 bug w/ YES objects
+    * fixed E0101 false positives and introduced E0100 for generator __init__ 
+      methods 
+    * fixed W0233 bug w/ YES objects (may introduce some other W0231 false 
+      positive though if astng fail to infer parent classes
+
 
 2006-09-25  --  0.12.1
     * fixed python >= 2.4 format false positive with multiple lines statement
